--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/imperiumprinting/assets/logo-v3-B1XbR7oT.png" />
+  <link rel="icon" type="image/png" href="/imperiumprinting/assets/logo-BmRkcDaq.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Imperium Printing Bontang - Percetakan Premium, Cepat, dan Berkualitas. Spanduk, Kartu Nama, Sticker, dan lainnya." />
